tests/frontend/fail/emptystorage/var.act
constructor of LValue
interface constructor()

creates

    uint x := (true && x)
    
invariants

    x == 0
